--- a/astra_agent.service
+++ b/astra_agent.service
@@ -1,28 +1,35 @@
 [Unit]
 Description=Astra Vein Receptionist AI Agent
-After=network.target ollama.service pulseaudio.service
-Wants=ollama.service
+After=network-online.target ollama.service sound.target
+Wants=network-online.target ollama.service
 
 [Service]
 Type=simple
 User=ubuntu
 Group=ubuntu
-WorkingDirectory=/home/ubuntu/roboai-espeak
+WorkingDirectory=/home/ubuntu/Downloads/roboai-espeak/roboai-espeak-main
 Environment="PATH=/home/ubuntu/.local/bin:/usr/local/bin:/usr/bin:/bin"
 Environment="DISPLAY=:0"
-Environment="PULSE_SERVER=/run/user/1000/pulse/native"
+Environment="XAUTHORITY=/home/ubuntu/.Xauthority"
+Environment="DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus"
+Environment="PULSE_SERVER=unix:/run/user/1000/pulse/native"
+Environment="XDG_RUNTIME_DIR=/run/user/1000"
 
-# Wait for system to be ready
-ExecStartPre=/bin/sleep 10
+# Wait for system to be fully ready (Ollama + audio)
+ExecStartPre=/bin/sleep 15
 
-# Clear Ollama cache and restart
-ExecStartPre=/bin/bash -c "sudo systemctl stop ollama && rm -rf /home/ubuntu/.ollama/cache/* && sudo systemctl start ollama && sleep 5"
+# Ensure Ollama is running (don't stop/restart - causes issues)
+ExecStartPre=/bin/bash -c "systemctl is-active ollama || sudo systemctl start ollama"
+ExecStartPre=/bin/sleep 5
 
-# Run diagnostics (skip audio test to avoid blocking)
-ExecStartPre=/usr/bin/env SKIP_AUDIO_TEST=1 /home/ubuntu/.local/bin/uv run python /home/ubuntu/roboai-espeak/diagnostics_audio.py
+# Clear stale audio configs
+ExecStartPre=/bin/bash -c "cd /home/ubuntu/Downloads/roboai-espeak/roboai-espeak-main && rm -f device_config.yaml"
 
-# Start agent
-ExecStart=/home/ubuntu/.local/bin/uv run /home/ubuntu/roboai-espeak/src/run.py astra_vein_receptionist
+# Verify audio devices are available
+ExecStartPre=/bin/bash -c "timeout 10 arecord -l || exit 0"
+
+# Start agent (no diagnostics - they block startup)
+ExecStart=/home/ubuntu/.local/bin/uv run /home/ubuntu/Downloads/roboai-espeak/roboai-espeak-main/src/run.py astra_vein_receptionist
 
 # Restart on failure
 Restart=on-failure
