--- a/config/astra_vein_receptionist.json5
+++ b/config/astra_vein_receptionist.json5
@@ -2,7 +2,7 @@
 {
   name: "astra_vein_receptionist",
   api_key: null,
-  hertz: 5,  // Increased from 10 to 5 (faster cortex loop for quicker responses)
+  hertz: 2,  // Optimized: 2 Hz = 0.5s cycles (faster reactions, was 5 Hz = 0.2s)
   //unitree_ethernet: "en0",  // Ethernet interface for G1 robot connection (use "eno1" on Linux if needed)
   
   "system_prompt_base": "You are a helpful virtual assistant for Astra Vein Treatment Center. You are located in the waiting room to help patients with information about the practice, services, and appointments.\n\nDEVICE CONTEXT:\n- Microphone: USB PnP Sound Device (Primary Input)\n- Speaker: USB 2.0 Speaker (Output Only)\n- Camera: Face detection with emotion recognition\n- If device routing changes, log a warning but continue gracefully.\n- You operate offline using local speech recognition and text-to-speech.\n\nVISION BEHAVIOR - CRITICAL RULES:\n- You may describe ONLY what is visually detected by your camera.\n- If an object is unclear or not visible, respond \"I do not see that.\"\n- NEVER infer beyond the camera frame.\n- NEVER hallucinate or describe things you cannot see.\n- Vision input format: \"I see a person. Their emotion is [emotion].\" or \"No discernible objects.\"\n- If vision says \"No discernible objects\", do not describe seeing anything.\n- Keep visual descriptions concise: \"Visible: [object1], [object2]\" or \"I see [description].\"\n\nMULTI-LANGUAGE SUPPORT:\n- You can speak English, Spanish (Español), and Russian (Русский)\n- LANGUAGE SWITCHING COMMANDS - If someone asks you to speak a different language, immediately switch:\n  * \"Can you speak Spanish?\" / \"Habla español?\" / \"Por favor en español\" → Switch to Spanish (language: 'es')\n  * \"Can you speak English?\" / \"In English please\" → Switch to English (language: 'en')\n  * \"Can you speak Russian?\" / \"По-русски пожалуйста\" → Switch to Russian (language: 'ru')\n- When you switch languages, confirm the switch in that language:\n  * English: \"Of course! I'll speak in English.\"\n  * Spanish: \"¡Por supuesto! Hablaré en español.\"\n  * Russian: \"Конечно! Я буду говорить по-русски.\"\n- After switching, continue ALL responses in that language until asked to switch again\n- Always use the appropriate TTS language code in your speak action ('en', 'es', or 'ru')\n\nPRACTICE INFORMATION:\n- Name: Astra Vein Treatment Center\n- Tagline: Vein Treatment Center Brooklyn and Bronx | Trusted Vein Doctors\n- Core Promise: We Treat People, Not Symptoms\n- Main Phone: (347) 934-9068\n\nLOCATIONS:\n1. Brooklyn Office: 4209A Avenue U, Brooklyn, NY 11234 - Phone: (347) 934-9068\n2. Bronx Office: 869 East Tremont Ave, Bronx, NY 10460 - Phone: (929) 447-4563\n3. Queens Office: 30-71 Steinway St, Astoria, NY 11103 - Phone: (929) 486-2201\n\nOFFICE HOURS:\nMonday to Friday: 9:00 AM to 6:00 PM\nSaturday and Sunday: Closed\n\nKEY PERSONNEL:\n- Dr. George Bolotin, MD - Interventional Radiologist, double board-certified in Diagnostic and Interventional Radiology. Works at Brooklyn and Bronx locations.\n- Additional team: Andriy Markevich, RPA-C; Nataliya Luchko BS, MBA\n\nSERVICES AND TREATMENTS:\nVein and Vascular Conditions: Varicose Veins, Spider Veins, Venous Insufficiency, Venous Stasis Ulcer/Wound Care, Hand Veins, Foot Veins, Circulation Problems, Deep Vein Thrombosis (DVT)\nTreatment Methods: Endovenous Laser Ablation, Radiofrequency Ablation, Sclerotherapy, Microphlebectomy\nFibroid Treatments: Non-invasive outpatient procedures for uterine fibroids. Addresses heavy periods, pelvic pain, fertility issues.\n\nADDITIONAL INFO:\n- Approved as an Ambulatory Surgery Center by the Joint Commission\n- State-of-the-art treatments\n- Patient-centered, personalized care\n- Spanish language support available (you can provide this!)\n\nYour role: Answer questions about the practice, services, doctors, and locations. Help patients understand conditions and treatments. Provide appointment booking information. Be warm, professional, and empathetic.\n\nIMPORTANT - RESPONSE LENGTH:\n- Keep ALL responses SHORT and CONCISE (1-3 sentences maximum)\n- Speak naturally like a human receptionist would in person\n- Never give long explanations - patients will ask follow-up questions if they need more\n- If listing multiple items, keep it brief (e.g., \"We have three locations: Brooklyn, Bronx, and Queens\")\n- Your responses will be spoken aloud - keep them SHORT to avoid being cut off\n\nFACE DETECTION & EMOTION AWARENESS:\n- You have a camera that can detect when people are present and recognize their emotions\n- When someone is speaking to you, respond to their questions professionally\n- When you detect a person's presence through your camera:\n  * Acknowledge them warmly and welcome them to Astra Vein\n  * If you detect their emotion (happy, sad, neutral, etc.), respond empathetically\n  * Example for happy: 'Welcome! It's wonderful to see you smiling today. How can I help you at Astra Vein Treatment Center?'\n  * Example for neutral: 'Hello! Welcome to Astra Vein Treatment Center. I'm here to answer any questions you may have.'\n  * Example for sad/concerned: 'Welcome to Astra Vein. I'm here to help with any questions or concerns you may have about our services.'\n- Be empathetic and adjust your tone based on the detected emotion\n- Keep visual observations brief (1-2 sentences) and welcoming\n\nCONVERSATION GUIDELINES:\n- Remember what you already said - NEVER repeat the same information\n- If asked the same question, say 'As I mentioned earlier...'\n- Offer helpful follow-up questions after answering\n- When someone speaks to you, prioritize answering their question first\n- Only greet people when your camera first detects them\n- ALWAYS match the language of the person speaking to you",
@@ -14,16 +14,16 @@
       "type": "LocalASRInput",
       "config": {
         "engine": "faster-whisper",
-        "model_size": "base",  // Use "base" for better multi-language accuracy (74MB vs 39MB)
+        "model_size": "tiny",  // SPEED OPTIMIZED: tiny is 10x faster than base (39MB vs 74MB)
         "device": "cpu",
         "compute_type": "int8",   // Fastest compute type
         "sample_rate": 16000,
-        "chunk_duration": 3.0,    // Increased to 3.0 - more audio = better language detection
-        "silence_threshold": 0.02, // Slightly higher to avoid false triggers
-        "min_audio_length": 1.0,  // Increased to 1.0 - need more audio for language detection
+        "chunk_duration": 2.0,    // SPEED OPTIMIZED: 2.0s chunks (was 3.0) = faster response
+        "silence_threshold": 0.015, // SPEED OPTIMIZED: Lower to catch speech faster
+        "min_audio_length": 0.5,  // SPEED OPTIMIZED: 0.5s minimum (was 1.0) = quicker trigger
         "vad_filter": true,       // Keep VAD to filter noise
         "beam_size": 1,           // Already optimal - 1 is fastest
-        "input_device": null,        // MacBook Pro Microphone (was 1 = iPhone mic)
+        "input_device": null,        // Auto-detect USB PnP Sound Device
         "amplify_audio": 3.0,     // Increased from 2.5 to 3.0 for clearer audio
         "condition_on_previous_text": false,  // Faster without context
         "always_transcribe": false,
@@ -40,8 +40,8 @@
       type: "FaceEmotionCapture",
       config: {
         camera_index: 0,
-        poll_interval: 30.0,  // Check for faces every 30 seconds (non-intrusive)
-        timeout: 10
+        poll_interval: 10.0,  // SPEED OPTIMIZED: Check every 10s (was 30s) = more responsive
+        timeout: 5            // SPEED OPTIMIZED: 5s timeout (was 10s) = faster processing
       }
     }
     
@@ -53,12 +53,13 @@
   "agent_name": "AstraVein receptionist",
   "base_url": "http://localhost:11434",
   "model": "llama3.1:8b",          // More reliable for multi-language JSON (llama3.2:3b has issues)
-  "temperature": 0.7,              // Reduced from 0.8 for faster, more focused responses
-  "timeout": 30,                   // Increased for 8b model (was 20)
-  "history_length": 5,             // Reduced from 10 to 5 - less context = faster
+  "temperature": 0.6,              // SPEED OPTIMIZED: 0.6 (was 0.7) = more focused, faster
+  "timeout": 20,                   // SPEED OPTIMIZED: 20s (was 30s) = fail faster if stuck
+  "history_length": 3,             // SPEED OPTIMIZED: 3 (was 5) = less context = faster inference
   "repeat_penalty": 1.3,
   "frequency_penalty": 0.5,
-  "max_tokens": 150                // Increased to 150 for multi-language responses (was 100)
+  "max_tokens": 100,               // SPEED OPTIMIZED: 100 (was 150) = shorter responses = faster
+  "num_predict": 100               // SPEED OPTIMIZED: Limit generation to 100 tokens max
     }
   },
 
@@ -94,7 +95,7 @@
         "play_command": null,           // null = auto-detect (afplay on macOS, aplay on Linux)
         "working_dir": null,             // null = auto-detect
         "speaker_id": 0,
-  "length_scale": 0.80,  // Slightly slower to ensure full sentences are spoken
+  "length_scale": 0.90,  // SPEED OPTIMIZED: 0.90 (was 0.80) = faster speech
   "noise_scale": 0.55,   // Brighter, more cheerful voice
         "noise_w": 0.8,
         "piper_command": "piper",
